<resources>
    <string name="app_name">FlipNLearn</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="minimum_password">Invalid password! The password must contain 6 to 20 characters, have at least
        1 digit, 1 lower case letter, and 1 upper case letter</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="prompt_password">Password</string>
    <string name="old_prompt_password">Old Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="change_name">Change Name</string>
    <string name="change_email">Change Email</string>
    <string name="hint_change_name">Enter a Name, or a New and Different Name from your Current Name</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="delete_account">Delete Account</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">FlipNLearn</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="conf_hint_password">Confirm Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_new_name">New Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered with FlipNLearn now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_reset_password1">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_in">Log In</string>
    <string name="btn_sign_out">Log Out</string>
    <string name="btn_sign_in_google">Sign in with Google</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_main">Main Menu</string>
    <string name="btn_create_new_deck">Create New Card Deck</string>
    <string name="btn_existing_new_deck">Browse Existing Decks</string>
    <string name="btn_user_deck">Your Decks</string>
    <string name="welcome_user_msg">Hello</string>
    <string name="welcome_msg">"Welcome to Flip N&apos; Learn, the app that lets you create your own eFlash cards!"</string>
    <string name="enter_registered_email">Enter your registered email id</string>
    <string name="failed_send_email">Failed to send reset email!</string>
    <string name="password_reset_msg">"We have sent you instructions to reset your password!"</string>
    <string name="facebook_app_id">186567971821870</string>
    <string name="cancel_text">Cancel</string>

    <string name="sign_up_error_msg">The email address is already in use by another account.</string>
    <string name="no_email_entered">"Enter email address"</string>
    <string name="no_password_entered">"Enter password"</string>
    <string name="no_old_password_entered">"Enter old password"</string>
    <string name="no_new_password_entered">"Enter a new password"</string>
    <string name="no_conf_new_password_entered">"Confirm the new password"</string>
    <string name="passwords_do_not_match">"New password does not match Confirm password"</string>
    <string name="new_password_match_old_password">"New password cannot match old password"</string>

    <string name="delete_account_title">DELETE ACCOUNT</string>
    <string name="delete_acoount_msg">"Are you sure you want to delete your account, you will lose all your flash cards?"</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Account</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_account">AccountActivity</string>
</resources>
