<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.j_rus.flipnlearn_v2.app.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageButton
            android:id="@+id/btn_close_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            android:layout_gravity="left"
            android:elevation="0dp"
            android:backgroundTint="@color/colorPrimary"
            android:background="@android:drawable/btn_dialog" />

        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/ic_launcher" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/old_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dip"
            android:background="@color/btn_bg"
            android:text="@string/btn_login"
            android:textColor="@android:color/black" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_in_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_google_login"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:fb_defaultColor="#FFFFFF"
                app:fb_fontIconSize="20sp"
                app:fb_iconPaddingRight="23dp"
                app:fb_iconPaddingLeft="8dp"
                app:fb_iconResource="@drawable/google_icon_logo"
                app:fb_iconPosition="left"
                app:fb_radius="2dp"
                app:fb_text="SIGN IN WITH GOOGLE "
                app:fb_textColor="#000000"
                app:fb_textFont="Roboto-Medium"
                app:fb_textSize="14sp" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_facebook_login"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dip"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                app:fb_defaultColor="#39579B"
                app:fb_focusColor="#6183d2"
                app:fb_fontIconSize="20sp"
                app:fb_iconPaddingRight="16dp"
                app:fb_iconPaddingTop="5dp"
                app:fb_iconPaddingBottom="5dp"
                app:fb_iconPosition="left"
                app:fb_iconResource="@drawable/facebook_icon_logo"
                app:fb_radius="2dp"
                app:fb_text="SIGN IN WITH FACEBOOK"
                app:fb_textColor="#ffffff"
                app:fb_textSize="14sp" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
